<HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent" android:layout_height="wrap_content" >
	<!-- 
	/*
	 *	This content is generated from the API File Info.
	 *	(Alt+Shift+Ctrl+I).
	 *
	 *	@desc 		
	 *	@file 		choosefood
	 *	@date 		1623935336887
	 *	@title 		Page 1
	 *	@author 	
	 *	@keywords 	
	 *	@generator 	Export Kit v1.3.figma
	 *
	 */
	-->
	<ScrollView android:id="@+id/fried_rice_screen" 
		android:layout_width="wrap_content" 
		android:layout_height="match_parent" >

		<RelativeLayout android:id="@+id/content_container" 
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content" >













			<RelativeLayout android:id="@+id/page_fried_rice_screen_ek1"
				android:layout_marginTop="0dp"
				android:layout_marginStart="0dp"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				>

				<View android:id="@+id/_bg__fried_rice_screen_ek2"
					android:background="@drawable/_bg__fried_rice_screen_ek2_shape"
					 android:layout_marginStart="0dp"
					android:layout_marginTop="0dp"
					android:layout_width="360dp"
					android:layout_height="1287dp" />

				<View android:id="@+id/rectangle_1_ek15"
					android:background="@drawable/rectangle_1_ek15_shape"
					 android:layout_marginStart="0dp"
					android:layout_marginTop="0dp"
					android:layout_width="96dp"
					android:layout_height="232dp" />

				<View android:id="@+id/rectangle_2_ek15"
					android:background="@drawable/rectangle_2_ek15_shape"
					 android:layout_marginStart="72dp"
					android:layout_marginTop="0dp"
					android:layout_width="96dp"
					android:layout_height="232dp" />

				<TextView android:id="@+id/our_variants__fried_rice"
					android:fontFamily="Arial"
					android:textStyle="bold"
					android:layout_gravity="center_horizontal|center"
					android:gravity="center"
					android:textSize="35sp"
					android:textColor="@color/enjoy_your_berry_mounts_color"
					android:layout_marginLeft="6dp"
					android:layout_marginTop="20dp"
					android:layout_width="355dp"
					android:layout_height="121.5dp"
					android:text="@string/our_variants__fried_rice_string"
					 />

				<TextView android:id="@+id/popular_now_ek3"
					android:fontFamily="Arial"
					android:textSize="35sp"
					android:textColor="@color/enjoy_your_berry_mounts_color"
					android:layout_marginLeft="19dp"
					android:layout_marginTop="148dp"
					android:layout_width="229dp"
					android:layout_height="55.5dp"
					android:text="@string/popular_now_ek3_string"
					 />

				<View android:id="@+id/rectangle_54_ek3"
					android:background="@drawable/rectangle_54_ek3_shape"
					 android:layout_marginStart="12dp"
					android:layout_marginTop="211dp"
					android:layout_width="330dp"
					android:layout_height="300dp" />

				<View android:id="@+id/rectangle_55_ek3"
					android:background="@drawable/rectangle_55_ek3_shape"
					 android:layout_marginStart="19dp"
					android:layout_marginTop="892dp"
					android:layout_width="330dp"
					android:layout_height="300dp" />

				<View android:id="@+id/rectangle_56_ek3"
					android:background="@drawable/rectangle_56_ek3_shape"
					 android:layout_marginStart="19dp"
					android:layout_marginTop="543dp"
					android:layout_width="330dp"
					android:layout_height="300dp" />

				<ImageView android:id="@+id/__1hl_cllrspw_ek3"
					android:src="@drawable/__1hl_cllrspw_ek3"
					android:contentDescription="__1hl_cllrspw_ek3"
					 android:layout_marginStart="26dp"
					android:layout_marginTop="232dp"
					android:layout_width="309dp"
					android:layout_height="210dp" />

				<TextView android:id="@+id/veg__fried_rice__150_00"
					android:fontFamily="Arial"
					android:textSize="25sp"
					android:textColor="@color/rectangle_57_color"
					android:layout_marginLeft="29dp"
					android:layout_marginTop="451dp"
					android:layout_width="357dp"
					android:layout_height="57.5dp"
					android:text="@string/veg__fried_rice__150_00_string"
					 />

				<TextView android:id="@+id/shrimp_fried_rice__250_00"
					android:fontFamily="Arial"
					android:textSize="25sp"
					android:textColor="@color/rectangle_57_color"
					android:layout_marginLeft="26dp"
					android:layout_marginTop="779dp"
					android:layout_width="357dp"
					android:layout_height="57.5dp"
					android:text="@string/shrimp_fried_rice__250_00_string"
					 />

				<ImageView android:id="@+id/_rh0yhbinkf4_ek1"
					android:src="@drawable/_rh0yhbinkf4_ek1"
					android:contentDescription="_rh0yhbinkf4_ek1"
					 android:layout_marginStart="30dp"
					android:layout_marginTop="560dp"
					android:layout_width="309dp"
					android:layout_height="210dp" />

				<ImageView android:id="@+id/__6wfu4zx1u18_ek1"
					android:src="@drawable/__6wfu4zx1u18_ek1"
					android:contentDescription="__6wfu4zx1u18_ek1"
					 android:layout_marginStart="29dp"
					android:layout_marginTop="912dp"
					android:layout_width="309dp"
					android:layout_height="210dp" />

				<TextView android:id="@+id/special_fried_rice__200_00"
					android:fontFamily="Arial"
					android:textSize="25sp"
					android:textColor="@color/rectangle_57_color"
					android:layout_marginLeft="21dp"
					android:layout_marginTop="1131dp"
					android:layout_width="357dp"
					android:layout_height="57.5dp"
					android:text="@string/special_fried_rice__200_00_string"
					 />

			</RelativeLayout>


		</RelativeLayout>

	</ScrollView>
</HorizontalScrollView>